<resources>
    <string name="t">This is a long title text displayed in multiple lines.</string>
    <string name="unable_to_login"><u>Unable to login?</u></string>
    <string name="useIns">Please enter username characters as it is (eg R1xx.xx.xx)</string>
    <string name="usernameOrEmail">Username/Email</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_visiters__details">Visiters_Details</string>
    <string name="title_activity_notice__details">Notice_DetailsActivity</string>
    <string name="SENDER_ID">1082591809215</string>
    <string name="slide_1_vistor_title">VZ-Track Digital Solution To Manage Visitors</string>
    <string name="slide_2_notice_title">Stay Updated</string>
    <string name="slide_3_feedback_title">Get the Best Service Provider</string>
    <string name="slide_4_search_provider_title">Feedbacks</string>
    <string name="slide_1_visitor_subtitle">When the security person makes entry of your visitors you will get real time notification as well as history of all visitors visited at your premises</string>
    <string name="slide_2_notice_subtitle">Instantly get notice alerts to all home owners / office for events or in emergency</string>
    <string name="slide_3_feedback_subtitle">Here you will get the service provider details according to quality, price and punctuality on basis of rating</string>
    <string name="slide_4_search_provider_subtitle">You can give your valuable feedback to the service provider visited at your premises</string>
    <string name="view_sample_tut">View Tutorial Example</string>
    <string name="tutorial_done">Go</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="instant_notification">For best notification experience, Please allow VZTrack app to run in the background </string>
    <string name="forgot_password_link">http://vztrack.in/VZ-FAQ/forgotPassword.html</string>
    <string name="title_activity_local_stores">Local Stores</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acceptPasswordChar">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@#$%^&amp;&lt;&gt;*()_+/*-+?{}[],</string>
    <string name="passwordMessage">Passwords must contain at least six characters. \nUppercase (A-Z) / lowercase (a-z) and Numbers (0-9) are allowed. \nSpecial characters @ # $ % ^ &amp; * ( ) - _ ? &lt; &gt; { } [ ] , / are allowed</string>
    <string name="is_calling_you">Is calling you...</string>
    <string name="hang_up">HANG UP</string>
    <string name="you_are_calling">You are calling...</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="option_hint">Minimum 2, maximum 5 options are allowed</string>
    <string name="select_date">Poll Close Date : </string>
    <string name="save">Save</string>
    <string name="createinvitaion">Create Invitation</string>
    <string name="createcomplaint">Create Complaint</string>
    <string name="publish">Publish </string>
    <string name="btnTerminate">Terminate</string>
    <string name="createPollTitle">Create New Poll</string>
    <string name="addedOptions">Added Options</string>
    <string name="str50Chars">Maximum 50 Characters</string>
    <string name="str100Chars">Maximum 100 Characters</string>
    <string name="voteQuestion">Submit Your Vote</string>
    <string name="options">Options</string>
    <string name="createdDate">Created Date : </string>
    <string name="closeDate">Close Date : </string>
    <string name="terminate">Terminate This Poll</string>
    <string name="terminated">This Poll Is Terminated</string>
    <string name="closed">This Poll Is Closed</string>
    <string name="terminated_reason">Termination Reason : </string>
    <string name="poll">Poll</string>
    <string name="Participated">Total Participated : </string>
    <string name="no_polls">No polls available</string>
    <string name="notice_desc">Notice Description</string>
    <string name="notice_heading">Notice Heading</string>
    <string name="admin">Admin Features</string>
    <string name="home">Home</string>
    <string name="visitors">Visitors</string>
    <string name="rainbowresidents">Rainbow</string>
    <string name="preapproval">Pre Approvals</string>
    <string name="message">Messages</string>
    <string name="noticenminutes">Notices And Minutes</string>
    <string name="invoice">Invoice</string>
    <string name="serviceprovider">Service Provider</string>
    <string name="complaintregister">Complaint Register</string>
    <string name="searchnaddvehicle">Search/Add Vehicles</string>
    <string name="polls">Polls</string>
    <string name="knowyourmaid">Know Your Maid</string>
    <string name="daily_help">Daily Help</string>
    <string name="marketplace">Marketplace</string>
    <string name="localstores">Local Stores</string>
    <string name="carpool">Carpool</string>
    <string name="vehicleservice">Vehicle Servicing</string>
    <string name="setting">Settings</string>
    <string name="refervztrack">Refer VZTrack</string>
    <string name="supprot_chat">Support/Chat</string>
    <string name="logout">Logout</string>
    <string name="searchprovider">Serach Provider</string>
    <string name="servicefeedback">Service Feedback</string>
    <string name="nav_more_rattings">nav_more_rattings</string>
    <string name="news_paper">News Paper</string>
    <string name="covid19_updates">COVID-19 Updates</string>
    <string name="usermanual">User Manual</string>
    <string name="createNotice">Create Notice</string>
    <string name="createMessage">Create Message</string>
    <string name="createComplaint">Create Complaint</string>
    <string name="createPoll">Create Poll</string>
    <string name="back">Back</string>
    <string name="gcmSenderId">1082591809215</string>
    <string name="add_comment">Add Comment</string>
    <string name="close">Close</string>
    <string name="comment">Comments : </string>
    <string name="comment_to_close_complaint">Write here comment...</string>
    <string name="addEmailId">Register email id with VZTrack</string>
    <string name="enterEmail">Enter your email id</string>
    <string name="useMyEmail">Use my email to login</string>
    <string name="addEmail">Save</string>
    <string name="appInfo">App Information</string>
    <string name="no_domestic_help">No domestic help available</string>
    <string name="flatNumber">House No. : </string>
    <string name="dateAnDtime">Date And Time : </string>
    <string name="noofseats">No. Of Seats :  </string>
    <string name="source">Source Location</string>
    <string name="destination">Destination Location</string>
    <string name="remark">Remark : </string>
    <string name="remarkAnDContact">Write Remark Here...</string>
    <string name="offer_a_ride">Offer A Ride</string>
    <string name="request_a_ride">Request A Ride</string>
    <string name="car_pool">Carpool</string>
    <string name="by">Posted By : </string>
    <string name="mobile_no">Mobile No. : </string>
    <string name="enter_mobile_no">Enter Mobile No. </string>
    <string name="mobile_no_op">Mobile Number(Optional)</string>
    <string name="compliant_status">Status</string>
    <string name="select_estimated_date">Estimated Close Date :</string>
    <string name="write_comment_here">Maximum 100 characters</string>
    <string name="write_comment">Add your comment</string>
    <string name="no_comment">No comment added yet</string>
    <string name="no_reply">No reply added for this comment</string>
    <string name="posted_by">Posted By : </string>
    <string name="post_ad">Post Ad</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="title_text">Title : </string>
    <string name="desc_text">Description: </string>
    <string name="desc_hint"><font size="12">Add Product/Service description</font></string>
    <string name="title_product_hint"><font size="12">e.g. Refrigerator, Washing Machine</font></string>
    <string name="title_service_hint"><font size="12">e.g. Catering Service, Dance Class</font></string>
    <string name="price">Price : </string>
    <string name="price_hint"><font size="12">e.g. 500 or 500/Month</font></string>
    <string name="upload_photo">Upload Photo(Optional)</string>
    <string name="file_size">Maximum file size 5mb</string>
    <string name="camera">Open Camera</string>
    <string name="gallary">Open Gallery</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="choose">Select</string>
    <string name="type">Type</string>
    <string name="mobile_num"><font size="12">Mobile number(Optional)</font></string>
    <string name="Rs">\\u20B9</string>
    <string name="title_activity_market_place_ad_deatils">MarketPlaceAdDeatils</string>
    <string name="text_reason_to_close">Select reason to close ad</string>
    <string name="ad_close_reason1">Sold</string>
    <string name="ad_close_reason2">Change my mind</string>
    <string name="ad_close_reason3">Posted in error</string>
    <string name="ad_close_reason4">Slots full</string>
    <string name="remove"><u>Remove photo</u></string>
    <string name="no_add">No ad to display</string>
    <string name="back_image">Back Image</string>
    <string name="poll_name">Poll Name</string>
    <string name="poll_que">Poll Question</string>
    <string name="add_option">Add Options</string>
    <string name="calender">Calender</string>
    <string name="poll_opt">Poll Options</string>
    <string name="title_activity_conv">Conversations</string>
    <string name="title_activity_message">Message</string>
    <string name="loading_messages">Loading Messages...</string>
    <string name="loading_conv">Loading Contacts...</string>
    <string name="title_activity_rainbow__create_group">Rainbow_CreateGroup</string>
    <string name="website">www.vztrack.co.ke</string>
    <string name="email_id">info@vztrack.co.ke</string>
    <string name="mobile_number">+254 722 540620</string>
    <string name="try_again">Try again \n \n If you are not able to connect, please contact to VZTrack team</string>
    <string name="bottom_menu_item1"> Conversations </string>
    <string name="bottom_menu_item2"> Groups </string>
    <string name="bottom_menu_item3"> Contacts </string>
    <string name="bottom_menu_item4"> Profile </string>
    <string name="group_name"> Group Name : </string>
    <string name="group_description"> Description : </string>
    <string name="default_notification_channel_id">VZTrack_Channel</string>
    <string name="default_notification_channel_id_custom_sound">VZTrack_Channel_Custom_Sound</string>
    <string name="channel_name"> VZTrack Notification</string>
    <string name="channel_name_other"> VZTrack Notification_other</string>
    <string name="channel_desc"> VZTrack Notification Channel</string>
    <string name="empty_list">\n Its Empty, Nothing to show here</string>
    <string name="moderator">Group Admin</string>
    <string name="user"> Group User </string>
    <string name="wait">We are connecting, Please wait</string>
    <string name="no_connected">Unable to connect Rainbow. Please contact administrator. </string>
    <string name="loading">Loading...</string>
    <string name="id_proof">Id Proof</string>
    <string name="garage_work_mobile_number">8806174754</string>
    <string name="book_now">BOOK NOW</string>
    <string name="title_activity_invitation">Create New Invitation</string>
</resources>