<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MarketPlaceAdDeatils"
    android:layout_marginBottom="5dp"
    android:background="@color/colorWhite"
    tools:showIn="@layout/activity_market_place_ad_deatils">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp">

                <vztrack.gls.com.vztrack_user.CustumView.CustomTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"

                    style="@style/MyTextViewStyleForHeading"
                    android:textSize="16sp"
                    android:text="@string/title_text" />

                <vztrack.gls.com.vztrack_user.CustumView.CustomTextViewMedium
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    style="@style/MyTextViewStyleForSubHeading"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

                <vztrack.gls.com.vztrack_user.CustumView.CustomTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    style="@style/MyTextViewStyleForHeading"
                    android:text="@string/desc_text" />

                <vztrack.gls.com.vztrack_user.CustumView.CustomTextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                  style="@style/MyTextViewStyleForSubHeading"
                    android:layout_weight="1"
                   />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <vztrack.gls.com.vztrack_user.CustumView.CustomTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    style="@style/MyTextViewStyleForHeading"
                    android:text="@string/price" />

                <vztrack.gls.com.vztrack_user.CustumView.CustomTextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:textColor="@color/ripplecolor"
                    android:text="@string/price"
                   style="@style/MyTextViewStyleForSubHeading" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/type" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:text="@string/service"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/card_sub_heading1" />


                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_action_tag"/>

                </LinearLayout>




            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <vztrack.gls.com.vztrack_user.CustumView.CustomTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MyTextViewStyleForHeading"
                    android:textSize="16sp"
                    android:text="@string/posted_by" />

                <vztrack.gls.com.vztrack_user.CustumView.CustomTextView
                    android:id="@+id/tvPostedBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:text="@string/posted_by"
                   style="@style/MyTextViewStyleForSubHeading" />
            </TableRow>

            <TableRow
                android:id="@+id/trMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <vztrack.gls.com.vztrack_user.CustumView.CustomTextViewMedium
                    style="@style/MyTextViewStyleForHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mobile_no"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <vztrack.gls.com.vztrack_user.CustumView.CustomTextView
                        android:id="@+id/tvMobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                       style="@style/MyTextViewStyleForSubHeading"
                        android:onClick="MakeACall"/>

<!--                    <ImageView-->
<!--                        android:layout_width="25dp"-->
<!--                        android:layout_height="25dp"-->
<!--                        android:layout_marginLeft="5dp"-->
<!--                        android:src="@drawable/ic_action_phone_start"-->
<!--                        android:onClick="MakeACall"/>-->
                </LinearLayout>
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/nwcolor"
            android:layout_height="15dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <vztrack.gls.com.vztrack_user.CustumView.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"

                android:text="@string/write_comment"
              style="@style/MyTextViewStyleForHeading"
                android:textStyle="bold" />

            <vztrack.gls.com.vztrack_user.CustumView.CustomEdittext
                android:id="@id/tvComment"
                style="@style/MyTextViewStyleForEdittext"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_cardview_shadow_color"
                android:editable="false"
                android:hint="@string/write_comment_here"
                android:maxLength="100"
                android:onClick="ShowBottomSheetForCommentDialog"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <vztrack.gls.com.vztrack_user.CustumView.CustomTextView
                android:id="@+id/tvCommentsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textSize="16sp"
                style="@style/MyTextViewStyleForSubHeading"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:layout_margin="2dp"/>

            <vztrack.gls.com.vztrack_user.CustumView.CustomTextView
                android:id="@+id/tvNoComment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_comment"
                android:layout_marginTop="5dp"
                style="@style/MyTextViewStyleForSubHeading"
                android:gravity="center"
                android:visibility="gone"/>


        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>